syntax = "proto3";

package dymensionxyz.dymension.irc;

import "gogoproto/gogo.proto";
import "dymension/irc/params.proto";
import "dymension/irc/irc_requests.proto";

option go_package = "github.com/dymensionxyz/dymension/x/irc/types";

// GenesisState defines the irc module's genesis state.
message GenesisState {
           Params               params          = 1 [(gogoproto.nullable) = false];
           repeated IRCRequest  IRCRequestList  = 2 [(gogoproto.nullable) = false];
}

